# AI-AGENT-TRAVEL-PLANNER

./: .env.example  .gitignore  INSTRUCTIONS.md  README.md  checkpoint.md  common-issues.md  db-schema.sql  docker-compose.yml  flows.md  vault-init.sh
backend/: Dockerfile  alembic.ini  config.py  dependencies.py  main.py  pyproject.toml
backend/agent/: __init__.py  graph.py  prompts.py  state.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_vector_dim.py  003_vector_1536.py
backend/artifacts/ml_model/: MODEL_INSTRUCT.md  random_forest_travel_model.pkl
backend/db/: session.py
backend/llm/: __init__.py  client.py
backend/models/: alchemy.py  schemas.py
backend/rag/: chuncker.py  embedder.py  ingestion.py  load_doc.py  retriever.py
backend/routers/: agent.py  auth.py  health.py  ml_model.py  rag.py  user.py
backend/scripts/: probe_prompts.py  visualize_graph.py
backend/services/: auth.py  flights.py  fx.py  ml_inference.py  send_plan.py  weather.py
backend/tests/: conftest.py  test_agent_e2e.py  test_auth.py  test_graph_nodes.py  test_schemas.py
backend/tests/test_services/: test_flights.py  test_fx.py  test_send_plan.py  test_weather.py
backend/tests/test_tools/: test_ml_predictor.py  test_tool_allowlist.py
backend/tools/: __init__.py  flight_searcher.py  fx_checker.py  ml_predictor.py  rag_retriever.py  weather_fetcher.py
documents/: albania_budget.json  bali_relaxation.json  canada_family.json  costa_rica_adventure.json  dubai_luxury.json  egypt_culture.json  iceland_adventure.json  india_culture.json  italy_culture.json  japan_relaxation.json  maldives_relaxation.json  morocco_family.json  nepal_adventure.json  peru_adventure.json  portugal_family.json  seychelles_luxury.json  switzerland_luxury.json  thailand_budget.json  vietnam_budget.json
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: AuthGuard.jsx  ChatMessage.jsx  ChatPanel.jsx  Dashboard.jsx  LandingPage.jsx  LoginPage.jsx  Sidebar.jsx  SignupPage.jsx  (+1 more)
