[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "azure-identity>=1.25.3",
    "azure-keyvault-secrets>=4.11.0",
    "langchain>=1.2.15",
    "langchain-openai>=1.2.1",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.49",
]
