[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.30.0",
    "bcrypt>=4.0.0",
    "ddgs>=9.14.1",
    "ddgs>=9.0",
    "fastapi>=0.115.0",
    "httpx>=0.27",
    "hvac>=2.3.0",
    "joblib>=1.4.2",
    "langchain-openai>=0.3.3",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=0.2",
    "pandas>=2.2.3",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
    "resend>=2.29.0",
    "scikit-learn==1.6.1",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
